Tue May 20 13:33:40 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* vms/README.vms vms/config_h.vms vms/configure.com:
	* vms/descrip_mms.template vms/getpass.c vms/libodbc.opt:
	* vms/odbc_driver_axp.opt vms/odbc_unimplemented.c:
	- applied patch #733631
	 - own up in our config.h to having locale.h, nl_langinfo, and 
	   readline
	 - build the pool server
	 - redone getpass() implementation
	 - update list of ODBC functions
	 - no longer export ODBC functions that are not implemented
	- reindented

Tue May 20 12:49:20 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h src/odbc/odbc.c src/odbc/unittests/t0004.c:
	- fix bug binding parameters with NULL indicator
	- improve test for detect fixed bug

Mon May 19 13:47:52 EDT 2003	nsc <Nicholas_Castellano@acml.com>
	* include/sybdb.h include/tds.h src/dblib/dblib.c src/tds/mem.c
	  src/tds/read.c:
	- implement dbsetinterrupt().

Mon May 19 12:28:54 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c src/odbc/unittests/moreandcount.c:
	- fixed more&count test

Mon May 19 11:26:10 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c src/tds/locale.c: cleanup

Sun May 18 20:05:25 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: continue RPC work

Sat May 17 20:11:17 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h include/tdsodbc.h src/odbc/native.c:
	* src/odbc/odbc.c src/odbc/odbc_util.c src/odbc/prepare_query.c:
	* src/tds/query.c:
	- start RPC on ODBC
	- reuse some code

Sat May 17 14:48:43 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h src/odbc/prepare_query.c:
	- cleanup and docs

Thu May 16 17:25:35 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/getmac.c: get MAC address on Linux

Thu May 15 21:14:22 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* configure.in src/pool/Makefile.am:
	- fix compile problem with HP/UX 11
