@@ -62,7 +62,7 @@
 #include <dmalloc.h>
 #endif
 
-static char software_version[] = "$Id: convert.c,v 1.122 2003-05-08 03:14:57 jklowden Exp $";
+static char software_version[] = "$Id: convert.c,v 1.123 2003-05-20 15:31:00 freddy77 Exp $";
 static void *no_unused_var_warn[] = { software_version,
 	no_unused_var_warn
 };
@@ -1618,6 +1618,8 @@ TDS_INT
 tds_convert(TDSCONTEXT * tds_ctx, int srctype, const TDS_CHAR * src, TDS_UINT srclen, int desttype, CONV_RESULT * cr)
 {
 	TDS_INT length = 0;
+
+	assert(srclen >= 0 && srclen <= 2147483647u);
 
 	switch (srctype) {
 	case CASE_ALL_CHAR:
