@@ -1,3 +1,8 @@
+Tue May 20 17:31:07 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
+	* src/odbc/convert_sql2string.c src/odbc/odbc.c:
+	* src/odbc/sql2tds.c src/odbc/sql2tds.h src/tds/convert.c:
+	- support all values of StringOrLen in ODBC
+
 Tue May 20 13:33:40 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
 	* vms/README.vms vms/config_h.vms vms/configure.com:
 	* vms/descrip_mms.template vms/getpass.c vms/libodbc.opt:
